# Sem-2-Project

./: CMakeLists.txt  CONTRIBUTING.md  Matrix.cpp  README.md
include/: matrix.hpp  renderer.hpp  shader.hpp
math_engine/: CMakeLists.txt  run.bash
math_engine/src/: main.cpp  test.cpp  utils.hpp
matrixSFML/: CMakeLists.txt  CMakeLists1.txt  main.cpp  matrix.hpp  run.bash
matrixSFML/cmake-sfml-project/: CMakeLists.txt  run.sh
matrixSFML/cmake-sfml-project/src/: main.cpp
shaders/: fragment.glsl  vertex.glsl
src/: Matrix.cpp  main.cpp  renderer.cpp  shader.cpp
test/: cas_main  linear_solver.cpp  linear_solver.hpp  lp_parser.cpp  lp_parser.hpp  main.cpp  run.bash  simplex_plotter  simplex_solver.cpp  simplex_solver.hpp  simplex_visualizer_without_parser.cpp  solution_types.hpp  visual.sh
tests/: test1.cpp
